Bug 130812 - FILEOPEN: DOC: Text in not displayed ( semi-transparent? )
Summary: FILEOPEN: DOC: Text in not displayed ( semi-transparent? )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-02-20 14:52 UTC by Xisco Faulí
Modified: 2020-02-25 10:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (161.91 KB, image/png)
2020-02-20 14:52 UTC, Xisco Faulí
Details
sample file (68.50 KB, application/msword)
2020-02-20 16:07 UTC, Xisco Faulí
Details
sample 2 (32.00 KB, application/msword)
2020-02-20 20:17 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-02-20 14:52:48 UTC
Created attachment 158046 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attachment 94056 [details] from bug 74970

-> Text in header/footer is not displayed. See comparison image

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: bc994a4b01cf61444452bb377010c7c4cc377698
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-02-20 14:53:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bf540873f5e258452fed5006f65a403c95e7872a

author	Miklos Vajna <vmiklos@collabora.com>	2020-01-06 20:35:08 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-01-07 09:26:47 +0100
commit bf540873f5e258452fed5006f65a403c95e7872a (patch)
tree 027f723b6a0477cd2ae8c49aaebbd30339b26d9b
parent ecb5130e16898c0d2485e99564c57882b5ef25b0 (diff)
sw: add rendering for semi-transparent text

Bisected with: bibisect-linux64-6.5

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2020-02-20 16:07:02 UTC
Created attachment 158052 [details]
sample file

Same problem happening with the attached document. String 'ny-1045543' in footer is not visible
Comment 3 Xisco Faulí 2020-02-20 20:17:08 UTC
Created attachment 158060 [details]
sample 2

actually it's happening with text in the body too
Comment 4 Commit Notification 2020-02-24 12:21:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/634a9ba15d65b6fdc506326e6b49b4b957c5cfcb

tdf#130812 DOC import: fix unexpected transparency of text

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-02-25 10:48:53 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: e6b9bc3f2ecf0fb7fde5b02f9d750ccbe022f4c1
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for the quick fix!