tdf#130812 DOC import: fix unexpected transparency of text

DOC can have black with transparency set to 0xff, and that is meant to
be just black. Allow COL_AUTO, though; the rendering will not consider
that as transparent anyway.

Other than that, DOC does not support text with transparency, it's a
DOCX-only feature.

Change-Id: I33f61b54b8ebd7958845063ae61900182d6f5e80
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89321
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 634a9ba15d65b6fdc506326e6b49b4b957c5cfcb)