sw/CppunitTest_sw_ww8import.mk
@@ -26,6 +26,7 @@ $(eval $(call gb_CppunitTest_use_libraries,sw_ww8import, \
     vcl \
     sfx \
     sw \
+    tl \
 	utl \
 ))
 
